Fixing weird social icon spacing

--- a/style.css
+++ b/style.css
@@ -172,10 +172,6 @@ input[type="submit"] {
         font-weight: 200;
     }
 
-    .social-icons {
-        margin-top: 20px;
-    }
-
     .social-icons li img {
         width: 30px;
         height: 30px;
